2001-02-23  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_hierarchy.c: Fixed the nasty bug which was caused by my
	  replacing the rc system to be like gschem.  Basically schematics
	  were being loaded so that there was only ONE copy in memory at 
	  all times.  This is not how gnetlist works.  Each hierarchical
	  schematic must be uniq in memory.  Fixed it by changing
	  libgeda's s_hierarchy_down_schematic_single to take a normal
	  or force flag.
	
2001-02-17  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_traverse.c: Got all the traverse functions to use the new
	  connection system

	* src/g_rc.c, i_vars.c: Replaced rc system to be almost exactly
	  the same as gschem's

	* lib/system-gnetlistrc.in: Updates to this file to take into
	  account about changes

	* include/i_vars.h: Updated file to take into account above
	  changes
	
2001-01-30  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_traverse.c: Fixed the graphical=1 test so that the 
	  outside of the component is also looked at for this attribute

2001-01-27  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_rename.c: Due to a bug in how the s_rename_* routines are
	  being used, you cannot get the renamed names, added code to properly
	  mux several sets of rename pairs.

	* src/s_hierarchy.c: Changed the s_rename_destroy to use 
	  s_rename_next_set (instead of destroying, go to the next set)

	* src/gnetlist.c: Changed s_rename_destroy to s_rename_destroy_all

	* tests/netattrib_1*: Added a test schematic and valid netlist to 
	  the tests

2001-01-26  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_net.c, s_rename.c: More work on getting the rename of two
	  same named nets working.

2001-01-25  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_net.c: Added some code which will rename nets which are
	  named twice.  This code needs to be examined again to make sure
	  this is the right way of doing this.

2001-01-17  Stefan Petersen  <spe@geda.seul.org>
